# agentic-platform

./: .gitignore  README.md
backend/: .coverage  .gitignore  README.md  backend.spec  checkpoints.sqlite  database.db  mcp_config.json  migrate_agent_templates.py  migrate_db.py  pyproject.toml  test_ocr_custom.py  test_ocr_specific.py  verify_csv_tool.py  verify_dspy_refactor.py  verify_lmstudio.py  verify_sig.py  verify_tool_node.py
backend/app/: config.py  database.py  exceptions.py  logging.py  main.py
backend/app/api/: agent_templates.py  flows.py  guardrails.py  rag.py  run.py  settings.py  smart_nodes.py  tech-spec.md  tools.py
backend/app/engine/: compiler.py  debug.py  dspy_metrics.py  dspy_modules.py  dspy_optimizer.py  dspy_rewards.py  dspy_utils.py  rag_compiler.py  router.py  state.py  storage.py  tech-spec.md
backend/app/models/: agent_template.py  flow.py  flow_version.py  settings.py  tech-spec.md
backend/app/nodes/: agent.py  iterator_node.py  rag_node.py  (+5 more)
backend/scripts/: check_db_flows.py  migrate_v1_locks.py  reproduce_delete_bug.py  test_ollama_tools.py  test_parallel_compiler.py
backend/tests/: TESTING.md  test_agent_structured_output.py  test_api_flows.py  test_api_settings.py  test_compiler_cycle.py  test_config.py  test_database.py  test_dspy_assertions.py  test_dspy_engine.py  test_dspy_explicit.py  test_exceptions.py  test_integration_execution.py  test_smart_node.py  test_tool_node.py  verify_epic3.py  verify_epic4.py  verify_flows.py  verify_loop_limit.py  verify_mcp.py  verify_puppeteer_connect.py  verify_write_tool.py
(+347 files in other folders)
