[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI Backend for Agentic Platform"
authors = ["Agentic AI <ai@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.scripts]
start = "app.main:start"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
fastapi = "^0.109.0"
pillow = "^10.2.0"
pytesseract = "^0.3.10"
uvicorn = {extras = ["standard"], version = "^0.38.0"}
pydantic = "^2.6.0"
sqlmodel = "^0.0.27"
alembic = "^1.17.2"
keyring = "^25.7.0"
httpx = "0.27.2"
langchain = "^1.1.3"
langchain-openai = "^1.1.1"
langchain-anthropic = "^1.2.0"
langchain-community = "^0.4.1"
langgraph = "^1.0.4"
langchain-core = "^1.1.3"
aiosqlite = "^0.21.0"
langgraph-checkpoint-sqlite = "^3.0.1"
mcp = "^1.23.3"
dspy = "^3.0.4"
langchain-ollama = "^1.0.0"
langchain-aws = "^1.1.0"
langchain-mistralai = "^1.1.0"
pypdf = "^6.4.2"
pdf2image = "^1.17.0"
aiofiles = "^25.1.0"
pydantic-settings = "^2.12.0"
structlog = "^25.5.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-asyncio (>=1.3.0,<2.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)"
]
